# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: Tests-and-linter.yml
page_loader/: __init__.py  change.py  file_manager.py  html.py  loader.py  logger.py  name.py  namer.py  urls.py  web_manager.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_change.py  test_html.py  test_loader.py  test_name.py  test_page-loader.py  test_page_loader.py
tests/fixtures/: before.html  expected.html  raw_html.html  ru-hexlet-io-courses.html  test.html  test_page_2.html
