[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["alexander_potapkov <xanben@mail.ru>"]
readme = "README.md"
packages = [{include = "page-loader"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
