[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["alexander_potapkov <xanben@mail.ru>"]
readme = "README.md"
packages = [
    {include = "page_loader"},
]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest-cov = "^3.0.0"
pytest = "^7.1.3"
requests = "^2.28.1"
requests-mock = "^1.10.0"
flake8-noqa = "^1.2.9"
beautifulsoup4 = "^4.11.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
